--- a/Code/index.html
+++ b/Code/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
   <body>
-    <!-- Your HTML content here -->
+    <!-- Put your images here -->
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
       <img class="image" src="/photo_1.jpg" alt="image1" draggable="false" />
       <img class="image" src="/photo_9.avif" alt="image2" draggable="false" />
